--- a/index.html
+++ b/index.html
@@ -5,11 +5,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Annisa's portFolio</title>
 </head>
 
 <body>
+    <script src="https://kit.fontawesome.com/a3731978a6.js" crossorigin="anonymous"></script>
+    <div class="container">
+        <nav>
+            <div class="logo">portFolio<b>.</b></div>
+            <ul class="navItems">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Skills</a></li>
+            </ul>
+            <div class="links">
+                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="#"><i class="fa-brands fa-github"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            </div>
+        </nav>
 
+        <div class="wrapper">
+            <div class="cols cols0">
+                <span class="topline">Annisa Firlia</span>
+                <h1><span class="multiText">Junior Fullstack Developer</span></h1>
+                <p>a student at Purwadhika Digital Technology School. i'm just down to learn Backend with Nodejs
+                    using express framework to create restful Api and still learning other skills which is Reactjs.
+                </p>
+            </div>
+            <div class="imgbox">
+                <img src="profil.jpg" alt="" width="200px" height="200px">
+            </div>
+        </div>
+    </div>
+    </div>
 </body>
 
 </html>
